@@ -16,7 +16,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclCmdIL.c,v 1.177 2010/02/24 10:45:04 dkf Exp $
+ * RCS: @(#) $Id: tclCmdIL.c,v 1.178 2010/02/28 20:12:48 dkf Exp $
  */
 
 #include "tclInt.h"
@@ -487,6 +487,7 @@ InfoArgsCmd(
     procPtr = TclFindProc(iPtr, name);
     if (procPtr == NULL) {
 	Tcl_AppendResult(interp, "\"", name, "\" isn't a procedure", NULL);
+	Tcl_SetErrorCode(interp, "TCL", "LOOKUP", "PROCEDURE", name, NULL);
 	return TCL_ERROR;
     }
 
@@ -547,6 +548,7 @@ InfoBodyCmd(
     procPtr = TclFindProc(iPtr, name);
     if (procPtr == NULL) {
 	Tcl_AppendResult(interp, "\"", name, "\" isn't a procedure", NULL);
+	Tcl_SetErrorCode(interp, "TCL", "LOOKUP", "PROCEDURE", name, NULL);
 	return TCL_ERROR;
     }
 
@@ -975,6 +977,7 @@ InfoDefaultCmd(
     procPtr = TclFindProc(iPtr, procName);
     if (procPtr == NULL) {
 	Tcl_AppendResult(interp, "\"", procName, "\" isn't a procedure",NULL);
+	Tcl_SetErrorCode(interp, "TCL", "LOOKUP", "PROCEDURE", name, NULL);
 	return TCL_ERROR;
     }
 
@@ -1005,6 +1008,7 @@ InfoDefaultCmd(
 
     Tcl_AppendResult(interp, "procedure \"", procName,
 	    "\" doesn't have an argument \"", argName, "\"", NULL);
+    Tcl_SetErrorCode(interp, "TCL", "LOOKUP", "ARGUMENT", argName, NULL);
     return TCL_ERROR;
 
   defStoreError:
@@ -1128,6 +1132,8 @@ InfoFrameCmd(
     levelError:
 	Tcl_AppendResult(interp, "bad level \"", TclGetString(objv[1]), "\"",
 		NULL);
+	Tcl_SetErrorCode(interp, "TCL", "LOOKUP", "STACK_FRAME",
+		TclGetString(obj[1]), NULL);
 	return TCL_ERROR;
     }
 
@@ -1523,6 +1529,8 @@ InfoLevelCmd(
   levelError:
     Tcl_AppendResult(interp, "bad level \"", TclGetString(objv[1]), "\"",
 	    NULL);
+    Tcl_SetErrorCode(interp, "TCL", "LOOKUP", "STACK_LEVEL",
+	    TclGetString(objv[1]), NULL);
     return TCL_ERROR;
 }
 
